<resources>
    <string name="app_name">projectLinearyLyout</string>
    <string name="button">Button</string>
    <string name="poids">poids</string>
    <string name="text">Text</string>
    <string name="femme">Femme</string>
    <string name="homme">Homme</string>
    <string name="result">Result</string>
    <string name="calcule">Calcule</string>
    <string name="age">Age</string>
    <string name="taille">Taille</string>
    <string name="calculate_mg">Calculate MG</string>
    <string name="history">History</string>
</resources>
