<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="4">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center">
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="38dp">

                <RadioButton
                    android:id="@+id/femme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/femme"
                    android:layout_marginBottom="20dp"/>

                <RadioButton
                    android:id="@+id/homme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/homme"/>

            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:padding="16dp"
            android:gravity="center">
            <EditText
                android:id="@+id/poids"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/poids"
                android:inputType="number"/>
            <EditText
                android:id="@+id/taille"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/taille"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"/>
            <EditText
                android:id="@+id/age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/age"
                android:inputType="number"/>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/calcule"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/calcule"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/image"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/ic_launcher_background"
            android:src="@drawable/ic_launcher_foreground" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="20dp"
            android:gravity="center">
            <TextView
                android:id="@+id/result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/colorPrimary"
                android:text="@string/result"
                android:gravity="center"/>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>